# src/main/java/com/hermanvfx/springbackreviewplatform/controller/UserController.java
@@ -3,6 +3,7 @@ package com.hermanvfx.springbackreviewplatform.controller;
 import com.example.userservice.controller.UserApi;
 import com.example.userservice.dto.ShortUserDto;
 import com.example.userservice.dto.UserDto;
+import com.example.userservice.dto.UserListDto;
 import com.hermanvfx.springbackreviewplatform.service.UserService;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.PageRequest;
@@ -32,10 +33,9 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<List<UserDto>> findAllUsers(Integer page, Integer size) {
+    public ResponseEntity<UserListDto> findAllUsers(Integer page, Integer size) {
         Pageable pageable = PageRequest.of(page, size);
-        List<UserDto> dtos = userService.findAllUser(pageable).toList();
-        return new ResponseEntity<>(dtos, HttpStatus.OK);
+        return new ResponseEntity<>( userService.findAllUser(pageable), HttpStatus.OK);
     }
 
     @Override
